# Lem-in

./: CMakeLists.txt  Makefile  asd.map  check_first_line.c  create_disjoint_path.c  create_graph.c  create_help.c  dsa.map  ft_check_comment.c  ft_check_format_exit.c  ft_check_format_one.c  ft_exit_adjacency.c  ft_make_adjacency.c  ft_validate.c  lem_in.h  main.c  main_alg.c  put_first_adjacency.c  test  work_queue.c  work_with_path.c
get_next_line/: get_next_line.c  get_next_line.h
get_next_line/libft/: Makefile
