cmake_minimum_required(VERSION 3.14)
project(lem_in C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(ft_printf)
include_directories(get_next_line)
include_directories(get_next_line/libft)
include_directories(get_next_line/libft/Includes)

add_executable(lem_in
        ft_printf/count_numbers.c
        ft_printf/create_after_percent.c
        ft_printf/create_until_percent.c
        ft_printf/ft_atoi.c
        ft_printf/ft_bzero.c
        ft_printf/ft_create_char.c
        ft_printf/ft_create_str.c
        ft_printf/ft_float.c
        ft_printf/ft_get_all.c
        ft_printf/ft_hex.c
        ft_printf/ft_includes.h
        ft_printf/ft_int.c
        ft_printf/ft_long_composition.c
        ft_printf/ft_long_composition_dot.c
        ft_printf/ft_long_division.c
        ft_printf/ft_long_double.c
        ft_printf/ft_long_long.c
        ft_printf/ft_long_pow.c
        ft_printf/ft_long_pow_minus.c
        ft_printf/ft_long_sum.c
        ft_printf/ft_long_sum_dot.c
        ft_printf/ft_memmove.c
        ft_printf/ft_octal.c
        ft_printf/ft_one.c
        ft_printf/ft_percent.c
        ft_printf/ft_pointer.c
        ft_printf/ft_printf.h
        ft_printf/ft_strdel.c
        ft_printf/ft_strdup.c
        ft_printf/ft_strjoin.c
        ft_printf/ft_strlen.c
        ft_printf/ft_strnew.c
        ft_printf/ft_strnew_one.c
        ft_printf/ft_strnew_zero.c
        ft_printf/ft_strrjoin.c
        ft_printf/ft_unsigned_int.c
        ft_printf/ft_work_flag.c
        ft_printf/ft_work_flag_help.c
        ft_printf/ft_zero.c
        ft_printf/get_after_dot_float.c
        ft_printf/get_before_dot_float.c
        ft_printf/take.c
        get_next_line/libft/Includes/libft.h
        get_next_line/libft/ft_isalnum.c
        get_next_line/libft/ft_isalpha.c
        get_next_line/libft/ft_isascii.c
        get_next_line/libft/ft_isdigit.c
        get_next_line/libft/ft_isprint.c
        get_next_line/libft/ft_itoa.c
        get_next_line/libft/ft_lstadd.c
        get_next_line/libft/ft_lstdel.c
        get_next_line/libft/ft_lstdelone.c
        get_next_line/libft/ft_lstiter.c
        get_next_line/libft/ft_lstmap.c
        get_next_line/libft/ft_lstnew.c
        get_next_line/libft/ft_memalloc.c
        get_next_line/libft/ft_memccpy.c
        get_next_line/libft/ft_memchr.c
        get_next_line/libft/ft_memcmp.c
        get_next_line/libft/ft_memcpy.c
        get_next_line/libft/ft_memdel.c
        get_next_line/libft/ft_memset.c
        get_next_line/libft/ft_putchar.c
        get_next_line/libft/ft_putchar_fd.c
        get_next_line/libft/ft_putendl.c
        get_next_line/libft/ft_putendl_fd.c
        get_next_line/libft/ft_putnbr.c
        get_next_line/libft/ft_putnbr_fd.c
        get_next_line/libft/ft_putstr.c
        get_next_line/libft/ft_putstr_fd.c
        get_next_line/libft/ft_strcat.c
        get_next_line/libft/ft_strchr.c
        get_next_line/libft/ft_strclr.c
        get_next_line/libft/ft_strcmp.c
        get_next_line/libft/ft_strcpy.c
        get_next_line/libft/ft_strequ.c
        get_next_line/libft/ft_striter.c
        get_next_line/libft/ft_striteri.c
        get_next_line/libft/ft_strlcat.c
        get_next_line/libft/ft_strmap.c
        get_next_line/libft/ft_strmapi.c
        get_next_line/libft/ft_strncat.c
        get_next_line/libft/ft_strncmp.c
        get_next_line/libft/ft_strncpy.c
        get_next_line/libft/ft_strnequ.c
        get_next_line/libft/ft_strnstr.c
        get_next_line/libft/ft_strrchr.c
        get_next_line/libft/ft_strsplit.c
        get_next_line/libft/ft_strstr.c
        get_next_line/libft/ft_strsub.c
        get_next_line/libft/ft_strtrim.c
        get_next_line/libft/ft_tolower.c
        get_next_line/libft/ft_toupper.c
        get_next_line/libft/libft.h
        get_next_line/get_next_line.c
        get_next_line/get_next_line.h
        count_num.c
        create_graph.c
        ft_check_comment.c
        ft_check_format_one.c
        ft_validate.c
        lem_in.h
        main.c
        create_help.c
        ft_copy_name.c
        check_first_line.c
        put_first_adjacency.c
        ft_make_adjacency.c
        ft_exit_checking.c
        ft_exit_adjacency.c
        work_queue.c
        main_alg.c
        work_with_path.c)